 GUIUtilities.NORMAL_BUFFER_ICON
 GUIUtilities.WINDOW_ICON
 BeanShell.runScript(View view, String path, Reader in, boolean ownNamespace, boolean rethrowBshErrors)
 BeanShell.eval(View view, NameSpace namespace, String command, boolean rethrowBshErrors)
 EditAction.getView(Component comp)
 EditBus.getComponents()
 JarClassLoader.getZipFile()
 MiscUtilities.charsToEscapes(String str)
 MiscUtilities.getLeadingWhiteSpace(String str)
 MiscUtilities.getTrailingWhiteSpace(String str)
 MiscUtilities.getVirtualWidth(Segment seg, int tabSize)
 MiscUtilities.getOffsetOfVirtualColumn(Segment seg, int tabSize, int column, int[] totalVirtualWidth)
 MiscUtilities.createWhiteSpace(int len, int tabSize, int start)
 MiscUtilities.globToRE(String glob)
 MiscUtilities.quicksort(Vector vector, Comparator compare)
 MiscUtilities.quicksort(Object[] obj, Compare compare)
 MiscUtilities.MenuItemCompare
 MiscUtilities.getEncodings()
 MiscUtilities.parseXML(InputStream in, DefaultHandler handler)
 MiscUtilities.findEntity(String systemId, String test, Class where)
 MiscUtilities.charsToEntities(String str)
 MiscUtilities.stringsEqual(String s1, String s2)
 MiscUtilities.objectsEqual(Object o1, Object o2)
 MiscUtilities.KB_FORMAT
 MiscUtilities.MB_FORMAT
 MiscUtilities.formatFileSize(long length)
 SegmentCharSequence.SegmentCharSequence(Segment seg, boolean reverse)
 PluginJar.getActions()
 Registers.StringRegister
 jEdit.getActionSetForAction(EditAction action)
 jEdit.getActions()
 jEdit.openFile(View view, String parent, String path, boolean readOnly, boolean newFile)
 jEdit.openFile(View view, String parent, String path, boolean readOnly, boolean newFile, Hashtable props)
 jEdit.createTextArea()
 VFS.VFS(String name)
 VFSManager.getVFSByName(String name)
 VFSManager.registerVFS(String protocol, VFS vfs)
 VFSManager.error(final Component comp, final String error, final Object[] args)
 VFSManager.getFilesystems()
 (Matthieu Casanova)

}}}
{{{ Editing
